Fixed shipping method block alignment issue

--- a/app/design/adminhtml/Magento/backend/Magento_Sales/web/css/source/module/_order.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Sales/web/css/source/module/_order.less
@@ -64,6 +64,7 @@
     }
 
     .order-shipping-address,
+    .order-shipping-method,
     .order-totals,
     .order-view-account-information .order-account-information {
         float: right;
